removed unnecessary lines and fixed alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,13 +93,13 @@ nav ul li a:hover {
 
 /* Let's make a section for my projects */
 .projects-header h2{
-    margin: 300px 0 0 100px;
+    margin-top: 300px;
+    text-align: center;
     color: lightgrey;
 }
 
 .projects {
     display: flex;
-    align-items: center;
     justify-content: space-around;
     padding: 25px;
 }
@@ -108,6 +108,7 @@ nav ul li a:hover {
     display: flex;
     align-items: center;
     flex-direction: column;
+    justify-content: center;
     margin: 0 70px;
     background-color: rgba(32,32,32,0.5);
     text-align: center;
@@ -153,15 +154,22 @@ nav ul li a:hover {
 
 /* refine the contact me section, we can make this pretty simple with just buttons */
 .contact {
+    margin-top: 300px;
+    text-align: center;
+}
+
+.contact h2 {
     color: lightgrey;
-    margin: 300px 0 0 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .contact .button-container {
     display: flex;
     justify-content: center;
-    justify-content: space-around;
-    margin: 100px 70px;
+    gap: 10px;
+    margin: 50px 70px;
 }
 
 .contact .button-container .button {
